--- a/css/main.css
+++ b/css/main.css
@@ -582,8 +582,32 @@ video {
   margin-top: 2.25rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .flex {
   display: flex;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[0\.2rem\] {
+  height: 0.2rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .w-\[1045px\] {
@@ -596,6 +620,18 @@ video {
 
 .w-\[1170px\] {
   width: 1170px;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[1020px\] {
+  width: 1020px;
+}
+
+.w-\[1024px\] {
+  width: 1024px;
 }
 
 .cursor-pointer {
@@ -620,9 +656,18 @@ video {
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.divide-solid > :not([hidden]) ~ :not([hidden]) {
+  border-style: solid;
+}
+
 .bg-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(3 3 4 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .px-\[25rem\] {
@@ -635,8 +680,27 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-\[4rem\] {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-\[6rem\] {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .text-left {
   text-align: left;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-poppins {
