--- a/css/main.css
+++ b/css/main.css
@@ -419,6 +419,10 @@ video {
   display: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -546,6 +550,11 @@ video {
   margin-right: auto;
 }
 
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
 .-mt-9 {
   margin-top: -2.25rem;
 }
@@ -562,6 +571,10 @@ video {
   margin-left: 3.5rem;
 }
 
+.ml-\[12rem\] {
+  margin-left: 12rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -574,6 +587,10 @@ video {
   margin-top: 4rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -582,32 +599,56 @@ video {
   margin-top: 2.25rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.ml-7 {
+  margin-left: 1.75rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.ml-\[15rem\] {
+  margin-left: 15rem;
+}
+
+.ml-\[16rem\] {
+  margin-left: 16rem;
+}
+
+.ml-\[18rem\] {
+  margin-left: 18rem;
+}
+
+.ml-\[28rem\] {
+  margin-left: 28rem;
+}
+
+.ml-\[25rem\] {
+  margin-left: 25rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-\[20rem\] {
+  margin-left: 20rem;
 }
 
 .flex {
   display: flex;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-\[100\%\] {
-  height: 100%;
+.grid {
+  display: grid;
 }
 
 .h-auto {
   height: auto;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .w-\[1024px\] {
@@ -626,6 +667,66 @@ video {
   width: 1170px;
 }
 
+.w-\[800px\] {
+  width: 800px;
+}
+
+.w-\[900px\] {
+  width: 900px;
+}
+
+.w-\[850px\] {
+  width: 850px;
+}
+
+.w-\[300\] {
+  width: 300;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.w-\[693px\] {
+  width: 693px;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[1020px\] {
+  width: 1020px;
+}
+
+.w-\[999px\] {
+  width: 999px;
+}
+
+.w-\[1010px\] {
+  width: 1010px;
+}
+
+.w-\[1005px\] {
+  width: 1005px;
+}
+
+.w-\[1009px\] {
+  width: 1009px;
+}
+
+.max-w-\[999px\] {
+  max-width: 999px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -636,6 +737,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -652,16 +757,27 @@ video {
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-dark {
@@ -672,6 +788,50 @@ video {
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-yellowish {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 0 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-\[5rem\] {
+  padding: 5rem;
+}
+
+.p-\[2rem\] {
+  padding: 2rem;
+}
+
+.p-\[4rem\] {
+  padding: 4rem;
 }
 
 .px-\[25rem\] {
@@ -689,17 +849,104 @@ video {
   padding-bottom: 6rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .pb-\[10rem\] {
   padding-bottom: 10rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-\[6rem\] {
+  padding-top: 6rem;
+}
+
+.pt-\[8rem\] {
+  padding-top: 8rem;
+}
+
+.pt-\[7rem\] {
+  padding-top: 7rem;
+}
+
+.pt-\[10rem\] {
+  padding-top: 10rem;
+}
+
+.pt-\[9rem\] {
+  padding-top: 9rem;
+}
+
+.pt-\[8\.5rem\] {
+  padding-top: 8.5rem;
+}
+
+.pt-9 {
+  padding-top: 2.25rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pl-14 {
+  padding-left: 3.5rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
+}
+
+.pl-\[5rem\] {
+  padding-left: 5rem;
+}
+
+.pl-\[5\.5rem\] {
+  padding-left: 5.5rem;
+}
+
+.pl-\[15rem\] {
+  padding-left: 15rem;
+}
+
+.pt-\[5rem\] {
+  padding-top: 5rem;
 }
 
 .text-left {
@@ -710,17 +957,16 @@ video {
   text-align: center;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
 .align-middle {
   vertical-align: middle;
 }
 
 .font-poppins {
   font-family: 'poppins', sans-serif;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl {
@@ -732,13 +978,56 @@ video {
   font-size: 2rem;
 }
 
+.text-\[4\.5rem\] {
+  font-size: 4.5rem;
+}
+
+.text-\[4rem\] {
+  font-size: 4rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-\[5rem\] {
   font-size: 5rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
+}
+
+.text-\[3\.5rem\] {
+  font-size: 3.5rem;
+}
+
+.text-\[3\.2rem\] {
+  font-size: 3.2rem;
+}
+
+.text-\[2\.5rem\] {
+  font-size: 2.5rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 
 .font-bold {
@@ -757,12 +1046,40 @@ video {
   font-weight: 100;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
 .font-normal {
   font-weight: 400;
 }
 
 .leading-9 {
   line-height: 2.25rem;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
 }
 
 .text-gray {
@@ -782,6 +1099,26 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.navbar {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 3 4 / var(--tw-bg-opacity));
+  padding-left: 25rem;
+  padding-right: 25rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.visited\:text-yellowish:visited {
+  color: rgb(255 255 0 );
 }
 
 .hover\:text-yellowish:hover {
