--- a/css/main.css
+++ b/css/main.css
@@ -550,11 +550,6 @@ html {
   margin-right: auto;
 }
 
-.my-14 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
-}
-
 .-mt-9 {
   margin-top: -2.25rem;
 }
@@ -573,6 +568,10 @@ html {
 
 .ml-\[12rem\] {
   margin-left: 12rem;
+}
+
+.ml-\[25rem\] {
+  margin-left: 25rem;
 }
 
 .mt-10 {
@@ -599,40 +598,20 @@ html {
   margin-top: 2.25rem;
 }
 
-.ml-7 {
-  margin-left: 1.75rem;
+.ml-12 {
+  margin-left: 3rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
-.ml-\[15rem\] {
-  margin-left: 15rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.ml-\[16rem\] {
-  margin-left: 16rem;
-}
-
-.ml-\[18rem\] {
-  margin-left: 18rem;
-}
-
-.ml-\[28rem\] {
-  margin-left: 28rem;
-}
-
-.ml-\[25rem\] {
-  margin-left: 25rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.ml-\[20rem\] {
-  margin-left: 20rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .flex {
@@ -645,10 +624,6 @@ html {
 
 .h-auto {
   height: auto;
-}
-
-.h-\[200px\] {
-  height: 200px;
 }
 
 .w-\[1024px\] {
@@ -667,64 +642,48 @@ html {
   width: 1170px;
 }
 
-.w-\[800px\] {
-  width: 800px;
-}
-
-.w-\[900px\] {
-  width: 900px;
-}
-
-.w-\[850px\] {
-  width: 850px;
-}
-
-.w-\[300\] {
-  width: 300;
-}
-
-.w-\[300px\] {
-  width: 300px;
+.w-\[310px\] {
+  width: 310px;
 }
 
 .w-\[320px\] {
   width: 320px;
 }
 
-.w-\[310px\] {
-  width: 310px;
-}
-
-.w-\[693px\] {
-  width: 693px;
-}
-
-.w-\[1000px\] {
-  width: 1000px;
-}
-
-.w-\[1020px\] {
-  width: 1020px;
+.w-\[850px\] {
+  width: 850px;
 }
 
 .w-\[999px\] {
   width: 999px;
 }
 
-.w-\[1010px\] {
-  width: 1010px;
-}
-
-.w-\[1005px\] {
-  width: 1005px;
-}
-
-.w-\[1009px\] {
-  width: 1009px;
+.w-\[1000px\] {
+  width: 1000px;
 }
 
 .max-w-\[999px\] {
   max-width: 999px;
+}
+
+.max-w-\[1000\] {
+  max-width: 1000;
+}
+
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .cursor-pointer {
@@ -739,8 +698,8 @@ html {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -749,6 +708,12 @@ html {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -763,16 +728,38 @@ html {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+.space-x-16 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(4rem * var(--tw-space-x-reverse));
+  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+.space-x-\[8rem\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(8rem * var(--tw-space-x-reverse));
+  margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-\[10rem\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(10rem * var(--tw-space-x-reverse));
+  margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .bg-black {
@@ -785,53 +772,37 @@ html {
   background-color: rgb(3 3 4 / var(--tw-bg-opacity));
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.bg-yellowish {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 0 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-5 {
-  padding: 1.25rem;
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
-.p-8 {
-  padding: 2rem;
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.p-10 {
-  padding: 2.5rem;
+.bg-teal-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
 
-.p-\[5rem\] {
-  padding: 5rem;
-}
-
-.p-\[2rem\] {
-  padding: 2rem;
+.bg-emerald-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
 }
 
 .p-\[4rem\] {
   padding: 4rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-\[25rem\] {
@@ -849,8 +820,25 @@ html {
   padding-bottom: 6rem;
 }
 
+.px-\[20rem\] {
+  padding-left: 20rem;
+  padding-right: 20rem;
+}
+
 .pb-\[10rem\] {
   padding-bottom: 10rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .pt-5 {
@@ -861,92 +849,60 @@ html {
   padding-top: 1.5rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pt-\[6rem\] {
-  padding-top: 6rem;
-}
-
-.pt-\[8rem\] {
-  padding-top: 8rem;
-}
-
-.pt-\[7rem\] {
-  padding-top: 7rem;
-}
-
-.pt-\[10rem\] {
-  padding-top: 10rem;
-}
-
-.pt-\[9rem\] {
-  padding-top: 9rem;
-}
-
-.pt-\[8\.5rem\] {
-  padding-top: 8.5rem;
 }
 
 .pt-9 {
   padding-top: 2.25rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
+.pt-\[6rem\] {
+  padding-top: 6rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
+.pt-\[7rem\] {
+  padding-top: 7rem;
 }
 
-.pl-12 {
-  padding-left: 3rem;
+.pt-\[8\.5rem\] {
+  padding-top: 8.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-\[8rem\] {
+  padding-top: 8rem;
 }
 
 .pt-12 {
   padding-top: 3rem;
 }
 
-.pl-14 {
-  padding-left: 3.5rem;
-}
-
 .pl-16 {
   padding-left: 4rem;
 }
 
-.pl-\[5rem\] {
-  padding-left: 5rem;
+.pl-\[8rem\] {
+  padding-left: 8rem;
 }
 
-.pl-\[5\.5rem\] {
-  padding-left: 5.5rem;
+.pl-\[10rem\] {
+  padding-left: 10rem;
 }
 
-.pl-\[15rem\] {
-  padding-left: 15rem;
+.pl-\[12rem\] {
+  padding-left: 12rem;
 }
 
-.pt-\[5rem\] {
-  padding-top: 5rem;
+.pl-\[13rem\] {
+  padding-left: 13rem;
+}
+
+.pl-\[14rem\] {
+  padding-left: 14rem;
 }
 
 .text-left {
@@ -957,16 +913,17 @@ html {
   text-align: center;
 }
 
-.align-top {
-  vertical-align: top;
-}
-
 .align-middle {
   vertical-align: middle;
 }
 
 .font-poppins {
   font-family: 'poppins', sans-serif;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -978,6 +935,14 @@ html {
   font-size: 2rem;
 }
 
+.text-\[3\.2rem\] {
+  font-size: 3.2rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
+}
+
 .text-\[4\.5rem\] {
   font-size: 4.5rem;
 }
@@ -986,48 +951,14 @@ html {
   font-size: 4rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-\[5rem\] {
-  font-size: 5rem;
-}
-
-.text-\[3rem\] {
-  font-size: 3rem;
-}
-
-.text-\[3\.5rem\] {
-  font-size: 3.5rem;
-}
-
-.text-\[3\.2rem\] {
-  font-size: 3.2rem;
-}
-
-.text-\[2\.5rem\] {
-  font-size: 2.5rem;
-}
-
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1038,6 +969,14 @@ html {
   font-weight: 200;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1046,36 +985,20 @@ html {
   font-weight: 100;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
-.leading-9 {
-  line-height: 2.25rem;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
+.leading-7 {
+  line-height: 1.75rem;
 }
 
 .leading-8 {
   line-height: 2rem;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
+.leading-9 {
+  line-height: 2.25rem;
 }
 
 .leading-10 {
